# haskell-webshell

./: CHANGELOG.md  LICENSE  README.md  comm.html  hwesh.cabal  main.hs  slides-rio-webinar.md  stack.yaml
Kash/: Interpreter.hs  Parser.hs  Terminal.hs  vimtest.txt
app/: Main.hs  MainBak.hs
cbits/: resize.c  resize.h
files/static/: hterm_all.js  wesh.js
old/: #main1.hs#  Kash.hs  Kash2.hs  KashInterpreter.hs  hsh.hs  kash.hs  main0.hs  main1.hs  main2.hs  pkgs.txt  shell.hs  shell1.hs
src/Wesh/: App.hs  Connect.hs  Parser.hs  Storage.hs  Terminal.hs  Types.hs
static/: kash.css  kash.js  kash0.js
tests/: Common.hs  Main.hs
tests/Wesh/: ParserSpec.hs
