name:                hwesh
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/hwesh#readme>
homepage:            https://github.com/lehins/massiv
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wesh.App
                     , Wesh.Connect
                     , Wesh.Parser
                     , Wesh.Types
                     , Wesh.Terminal
  other-modules:
  build-depends:       base            >= 4.8 && < 5
                     , attoparsec
                     , bytestring
                     , conduit
                     , mtl
                     , resource-pool
                     , persistent
                     , persistent-sqlite
                     , rio
                     , unix
                     , websockets
                     , yesod
                     , yesod-core
                     , yesod-static
                     , yesod-websockets

  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints


executable wesh
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wall -rtsopts -threaded "-with-rtsopts=-N"
  build-depends: base
               , persistent-sqlite
               , rio
               , rio-orphans
               , hwesh
               , yesod
               , yesod-static
               , warp
  default-language:    Haskell2010


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , Wesh.ParserSpec
                    , Spec
  build-depends:      attoparsec
                    , base
                    , bytestring
                    , hspec
                    , hwesh
                    , QuickCheck
                    , rio

  default-language:   Haskell2010
  extensions:          NoImplicitPrelude
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/hwesh
