name:                hwesh
version:             0.1.0.0
synopsis:            Short description
description:         Please see the README on GitHub at <https://github.com/lehins/haskell-webshell#readme>
homepage:            https://github.com/lehins/haskell-webshell
license:             BSD3
license-file:        LICENSE
author:              Alexey Kuleshevich
maintainer:          alexey@kuleshevi.ch
copyright:           2019 Alexey Kuleshevich
category:            Algorithms
build-type:          Simple
extra-source-files:  README.md
                   , CHANGELOG.md
                   , cbits/resize.h
                   , cbits/resize.c
                   , files/static/hterm_all.js
                   , files/static/wesh.js
                   , files/static/wesh.css
                   , files/vimtest.txt
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Wesh.App
                     , Wesh.Connect
                     , Wesh.Parser
                     , Wesh.Types
                     , Wesh.Terminal
                     , Wesh.Storage
  other-modules:
  build-depends:       base            >= 4.8 && < 5
                     , attoparsec
                     , aeson
                     , bytestring
                     , conduit
                     , cryptonite
                     , mtl
                     , resource-pool
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , rio
                     , http-types
                     , unix
                     , websockets
                     , yesod
                     , yesod-core
                     , yesod-static
                     , yesod-websockets

  default-language:    Haskell2010
  extensions:          NoImplicitPrelude
                     , OverloadedStrings
                     , NamedFieldPuns
  ghc-options:         -Wall
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
  include-dirs:        cbits
  c-sources:           cbits/resize.c
  cc-options:          -Wall -Wextra -pedantic -std=c99


executable wesh
  hs-source-dirs: app
  main-is:        Main.hs
  ghc-options:    -Wall -rtsopts -threaded "-with-rtsopts=-N"
  build-depends: base
               , optparse-applicative
               , persistent-sqlite
               , rio
               , rio-orphans
               , hwesh
               , yesod
               , yesod-static
               , warp
  default-language:    Haskell2010


test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:      Common
                    , Wesh.ParserSpec
                    , Spec
  build-depends:      attoparsec
                    , base
                    , bytestring
                    , hspec
                    , hwesh
                    , QuickCheck
                    , rio

  default-language:   Haskell2010
  extensions:          NoImplicitPrelude
  ghc-options:        -Wall
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -fno-warn-orphans
                      -threaded
                      -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/haskell-webshell
